--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -50,6 +50,9 @@ jobs:
       - name: Terraform min/max versions
         id: minMax
         uses: clowdhaus/terraform-min-max@main
+        with:
+          # The project root directory (.) is used as the default
+          directory: ${{ inputs.working_directory }} 
     outputs:
       minVersion: ${{ steps.minMax.outputs.minVersion }}
       maxVersion: ${{ steps.minMax.outputs.maxVersion }}
